Refactor elemental-agent to use subcommands (#84)
* Refactor elemental-agent to use subcommands


* Rename imports for easier maintenance


---------
